<resources>
    <string name="app_name">Register</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="action_sign_in_short">Cadastre-se</string>
    <string name="email">Email</string>
    <string name="minimum_password">A senha deve conter no minimo 6 caracteres!</string>
    <string name="auth_failed">Login ou senha inválidos</string>
    <string name="change_email">Trocar de Email</string>
    <string name="change_password">Trocar de senha</string>
    <string name="send_password_reset_email">Enviar senha para resetar email</string>
    <string name="new_pass">Nova senha</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Cadastre-se agora!</string>
    <string name="btn_link_to_login">Ja é cadastrado! Faça seu Login</string>
    <string name="title_activity_reset_password">recuperarSenhaActivity</string>
    <string name="btn_forgot_password">Esqueceu sua senha?</string>
    <string name="btn_reset_password">Resetar senha</string>
    <string name="hint_new_email">Novo Email</string>
    <string name="btn_change">Mudar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Deletar</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Esqueceu a senha?</string>
    <string name="forgot_password_msg">Informe seu email para enviarmos as intruções para resetar a senha.</string>
    <string name="title_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salvarLivro">Salvar</string>
    <string name="lido">Lido</string>
    <string name="quero_este_livro">Quero este livro</string>
    <string name="livro_favorito">É um dos seus livros favoritos.</string>
</resources>
